# hardened_malloc

./: .gitignore  CMakeLists.txt  LICENSE  arm_mte.h  chacha.c  chacha.h  h_malloc.c  memory.c  memory.h  memtag.h  mutex.h  pages.c  pages.h  random.c  random.h  util.c  util.h
include/: h_malloc.h
test/: double_free_large.c  double_free_large_delayed.c  double_free_small.c  double_free_small_delayed.c  impossibly_large_malloc.c  invalid_free_protected.c  invalid_free_small_region.c  invalid_free_small_region_far.c  invalid_free_unprotected.c  invalid_malloc_object_size_small.c  invalid_malloc_object_size_small_quarantine.c  invalid_malloc_usable_size_small.c  invalid_malloc_usable_size_small_quarantine.c  large_array_growth.c  mallinfo.c  mallinfo2.c  malloc_info.c  malloc_object_size.c  malloc_object_size_offset.c  offset.c  overflow_large_1_byte.c  overflow_large_8_byte.c  overflow_small_1_byte.c  overflow_small_8_byte.c  read_after_free_large.c  read_after_free_small.c  read_zero_size.c  realloc_init.c  string_overflow.c  unaligned_free_large.c  unaligned_free_small.c  unaligned_malloc_usable_size_small.c  uninitialized_free.c  uninitialized_malloc_usable_size.c  uninitialized_read_large.c  uninitialized_read_small.c  uninitialized_realloc.c  write_after_free_large.c  write_after_free_large_reuse.c  write_after_free_small.c  (+2 more)
